# enlil

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  api.py  docker-compose.yml  enlil-bench.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.md
benchmarks/: results_r1r3_v2.md  results_v1.md
docs/blog/: multi-agent-deliberation-post-quantum.md
enlil/: __init__.py  api.py  auth.py  budget.py  chunker.py  corpus.py  council.py  document_rag.py  documents.py  evolution.py  export.py  jobs.py  memory.py  memory_qdrant.py  meta_observer.py  orchestrator.py  quantum.py  reputation.py  rl_controller.py  router.py  synthesis_evaluator.py  telemetry.py
enlil/cli/: client.py  config.py  main.py  render.py
enlil/decrees/: __init__.py  decree.py  store.py
enlil/gods/: __init__.py  anu.py  base.py  claude.py  enki.py  inanna.py  marduk.py  nabu.py  nergal.py  ninurta.py  registry.py  tiamat.py
enlil/verticals/: cybersecurity.py  legal.py
tests/: conftest.py  test_api.py  test_bloque_j3.py  test_budget.py  test_corpus.py  test_council_integration.py  test_decrees.py  test_legal.py  test_memory.py  test_orchestrator.py  test_reputation.py  test_router.py  test_semana3.py  test_semana4.py  test_semana7.py  test_stats.py  test_synthesis_evaluator.py  test_task_endpoint.py
