[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
name = "enlil"
version = "1.0.0"
description = "El Consejo de los Dioses -- 9 modelos de IA deliberando en paralelo"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
enlil = "enlil.cli.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 
include = ["enlil*"]
